[package]
name = "ka-pi"
version = "0.2.0"
edition = "2021"
authors = ["ChAoS-UnItY"]
description = "A JVM Bytecode Manipulation Framework inspired by ASM."
license = "MIT"
repository = "https://github.com/ChAoSUnItY/Ka-Pi/"
readme = "README.md"
keywords = ["jvm", "jvm-bytecode", "bytecode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ka_pi"
path = "src/lib.rs"

[dependencies]
classfile_parser = { path = "classfile_parser", optional = true }

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
classfile_parser = ["dep:classfile_parser"]

[workspace]
members = [
    "classfile_parser"
]
