[package]
name = "ka-pi"
version = "0.2.0"
edition = "2021"
authors = ["ChAoS-UnItY"]
description = "A JVM Bytecode Manipulation Framework inspired by ASM."
license = "MIT"
repository = "https://github.com/ChAoSUnItY/Ka-Pi/"
readme = "README.md"
keywords = ["jvm", "jvm-bytecode", "bytecode"]

[lib]
name = "ka_pi"
path = "src/lib.rs"

[dependencies]
cfsp = { path = "cfsp", version = "1.0.0", optional = true }
blynd = { path = "blynd", version = "0.1.0" }

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
cfsp = ["dep:cfsp"]

[workspace]
members = [
    "cfsp",
    "blynd"
]
