[package]
name = "ka-pi"
version = "0.2.0"
edition = "2021"
authors = ["ChAoS-UnItY"]
description = "A JVM Bytecode Manipulation Framework inspired by ASM."
license = "MIT"
repository = "https://github.com/ChAoSUnItY/Ka-Pi/"
readme = "README.md"
keywords = ["jvm", "jvm-bytecode", "bytecode"]

[lib]
name = "ka_pi"
path = "src/lib.rs"

[features]
default = []

[dependencies]
bitflags = "2.4.0"
cesu8 = "1.1.0"
indexmap = "2.0.0"
