[package]
name = "cfsp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
cesu8 = "1.1.0"
paste = "1.0.13"
bitflags = { version = "2.3.3", features = ["serde"] }
thiserror = "1.0.43"
byteorder = "1.4.3"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
