[package]
name = "cfsp"
version = "1.0.0"
edition = "2021"
authors = ["ChAoS-UnItY"]
description = "A JVM Bytecode Manipulation Framework inspired by ASM."
license = "MIT"
repository = "https://github.com/ChAoSUnItY/Ka-Pi/cfsp"
readme = "README.md"
keywords = ["jvm", "jvm-bytecode", "bytecode"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
cesu8 = "1.1.0"
paste = "1.0.13"
bitflags = { version = "2.3.3", features = ["serde"] }
thiserror = "1.0.43"
byteorder = "1.4.3"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
